# rustyjelly

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/pong/: Cargo.toml  build.rs
examples/pong/src/: main.rs
jelly_engine/: Cargo.toml
jelly_engine/src/: basic.frag  basic.vert  engine.rs  lib.rs
jelly_engine/src/assets/: image_loader.rs  mod.rs
jelly_engine/src/core/: component.rs  entity.rs  mod.rs  scene.rs  system.rs  timing.rs  world.rs
jelly_engine/src/event/: stream.rs
jelly_engine/src/gl_utilities/: gl_buffer.rs  mod.rs
jelly_engine/src/graphics/: material.rs  mod.rs  sprite.rs  texture.rs  vertex.rs
jelly_engine/src/math/: matrix4x4.rs  mod.rs  transform.rs  vec2.rs  vec3.rs
src/: basic.frag  basic.vert  engine.rs  main.rs  render_gl.rs
src/gl_utilities/: gl_buffer.rs
src/gl_utility/: gl_buffer.rs  mod.rs  shader.rs
src/graphics/: color.rs  mod.rs  sprite.rs  texture.rs  vertex.rs
src/math/: matrix4x4.rs  mod.rs  point.rs  transform.rs  vec3.rs
