[package]
name = "jellyengine-core"
version = "0.1.0"
authors = ["max-jellycat <max@jellycat.fr>"]
edition = "2018"

[dependencies]
gl = "0.14.0"


[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2.git"
default-features = false
features = ["ttf","image","gfx","mixer"]

# [package.metadata.vcpkg]
# dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
# git = "https://github.com/microsoft/vcpkg"
# rev = "a0518036077baa4"

# [package.metadata.vcpkg.target]
# x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

# [features]
# gl_debug = ["gl/debug"]
