[package]
name = "jelly_engine"
version = "0.1.0"
authors = ["salty-max <max@jellycat.fr>"]
edition = "2018"

[dependencies]
auto_ops = "0.3.0"
gl = "0.14.0"
hex = "0.4.3"
image = "0.23.14"
sdl2 = { version = "0.34.0", features = ["bundled", "use-vcpkg"]}

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
