[package]
name = "jelly_engine"
version = "0.1.0"
authors = ["salty-max <max@jellycat.fr>"]
edition = "2018"

[dependencies]
auto_ops = "0.3.0"
downcast-rs = "1.2.0"
gl = "0.14.0"
hex = "0.4.3"
image = "0.23.14"
sdl2 = { version = "0.34.0", features = ["bundled","static-link","use-vcpkg"]}

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"

[package.metadata.vcpkg.target]
x86_64-apple-darwin = { install = ["sdl2"] }
x86_64-pc-windows-msvc = { triplet = "x64-windows-static", install = ["sdl2"] }
